<resources>


    <string name="tv_count_favourites_title">%1$s Вакансия</string>

    <string name="tv_street">%1$s, %2$s, %3$s</string>

    <string name="tv_responded_count_1">%1$d человек уже откликнулся</string>
    <string name="tv_responded_count_2_3_4">%1$d человека уже откликнулись</string>
    <string name="tv_responded_count_all_the_rest">%1$d человек уже откликнулись</string>

    <string name="tv_looking_number_1">%1$d человек сейчас смотрит</string>
    <string name="tv_looking_number_2_3_4">%1$d человека сейчас смотрят</string>
    <string name="tv_looking_number_all_the_rest">%1$d человек сейчас смотрят</string>

    <string name="count_currently_viewing_text_1">Сейчас просматривает %1$s человек</string>
    <string name="count_currently_viewing_text_2_3_4">Сейчас просматривают %1$s человека</string>
    <string name="count_currently_viewing_text_all_the_rest">Сейчас просматривают %1$s человека</string>

    <string name="exp_text_field">Требуемый опыт: %1$s</string>
    <string name="args_concat_email">Отправили код на %1$s</string>
    <string name="input_text_error_mesaga">Вы ввели неверный e-mail</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user."
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">JobSearchApp</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <string name="title_responses">Отклики</string>
    <string name="title_enter_lk">Вход в личный кабинет</string>
    <string name="title_work_search">Поиск работы</string>
    <string name="button_continue">Продолжить</string>
    <string name="text_EditText">Электронная почта или телефон</string>
    <string name="envelope_image">Хард-Картинка</string>
    <string name="title_worker_search">Поиск сотрудников</string>
    <string name="title_set_access_db">Размещение вакансий и доступ к базе резюме</string>
    <string name="button_worker_search">Я ищу сотрудников</string>
    <string name="button_sign_in_with_pass">Войти с паролем</string>
    <string name="button_confirm">Подтвердить</string>
    <string name="tv_code_over_email">Отправили код на example@mail.ru</string>
    <string name="tv_enter_code_please">Напишите его, чтобы подтвердить, что это\nвы,
        а не кто-то другой входит в личный\nкабинет</string>
    <string name="tv_edt_key_word">Должность, ключевые слова</string>
    <string name="tv_offers_for_you">Вакансии для вас</string>
    <string name="tv_verticals_card">Текст в Вертикальном списке карточек</string>
    <string name="tv_looking_for">Сейчас просматривает 1 человек</string>
    <string name="tv_name_staff">UI/UX Designer</string>
    <string name="tv_city">Минск</string>
    <string name="tv_name_company">Мобирикс</string>
    <string name="tv_experience">Опыт от 1 года до 3 лет</string>
    <string name="tv_date_of_public">Опубликовано 20 февраля</string>
    <string name="button_calls">Откликнуться</string>
    <string name="button_favorites">Избранные вакансии</string>
    <string name="image_approved">иконка проверенности компании. Хардкод, есть у каждой компании</string>
    <string name="image_filter">кнопка фильтра</string>
    <string name="image_offer">иконка верхнего списка</string>
    <string name="tv_horizontal_card">Текст в горизонтальном списке карточек</string>
    <string name="tv_up_cv">поднять</string>
    <string name="butt_show_vacancy">Ещё Х вакансий_и_я</string>
    <string name="button_back">button_looks_like_arrow_for_back</string>
    <string name="butt_favorites_des_on">button for favorites logic</string>
    <string name="share_useless_des_on">share_useless</string>
    <string name="hardcode_image">hardcode_image</string>
    <string name="image_view_icon_for_applied">image_view_icon_for_applied</string>
    <string name="image_view_icon_for_looking_number">image_view_icon_for_looking_number</string>
    <string name="hardcode_your_tasks">Ваши задачи</string>
    <string name="hardcode_text_ask_questions_employer">Задайте вопрос работодателю</string>
    <string name="hardcode_grey_color_explanations">Он получит его с откликом на вакансию</string>
    <string name="tools_text_fragment_vacancie_1">Где распологается место работы?</string>
    <string name="tools_text_fragment_vacancie_2">Какой график работы?</string>
    <string name="tools_text_fragment_vacancie_3">Вакансия открыта?</string>
    <string name="tools_text_fragment_vacancie_4">Какая оплата труда?</string>
    <string name="button_text_applied">Откликнуться</string>
    <string name="avatar_image">avatar_image</string>
    <string name="cv_for_response">Резюме для отклика</string>
    <string name="add_text_with_cv">Добавить сопроводительное</string>
    <string name="your_add_message">Ваше сопроводительное письмо</string>
    <string name="title_favourites">Избранное</string>
    <string name="fragment_enter_lk_label">fragment_enter_lk</string>
    <string name="button_back_esc">кнопка стереть</string>
    <string name="errr_text_input">Какое то сообщение что некоректен ввод</string>

    <string name="fragment_response_name">fragment responses</string>
    <string name="fragment_message_name">fragment message</string>
    <string name="fragment_profile_name">fragment profile</string>

</resources>