<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".FragmentLkEnter">

    <TextView
        android:id="@+id/tv_enter_lk"
        style="@style/style_sf_pro_bold_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:textSize="20sp"
        android:text="@string/title_enter_lk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp">

            <TextView
                android:id="@+id/tv_work_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_work_search"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/envelope_image"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/grey"
                        android:contentDescription="@string/envelope_image"
                        android:padding="7dp"
                        android:src="@drawable/ic_responses" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/grey"
                        android:text="@string/text_EditText"
                        android:textColor="@color/inactive_text_color" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_continue"
                    android:layout_width="167dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/button_continue"
                    android:textColor="@color/inactive_text_color"
                    app:cornerRadius="8dp" />

                <Button
                    android:id="@+id/button_sign_in_with_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/button_sign_in_with_pass"
                    android:textColor="@color/blue" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/tv_worker_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_worker_search"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_set_access_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/title_set_access_db"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_search_staff"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/button_worker_search"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="50dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>