<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:paddingHorizontal="16dp"
    android:paddingTop="45dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/top_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="38dp"
            android:layout_height="5dp"
            android:background="@color/grey_2" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/avatar_image"
        android:src="@drawable/ellipse_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_line" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/cv_for_response"
        android:textColor="@color/grey_3"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/top_line" />

    <TextView
        android:id="@+id/tv_title_prof"
        style="@style/style_sf_pro_bold_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="asdasdasdadasdasdas" />

    <TextView
        android:id="@+id/tv_separate_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/separate_line"
        app:layout_constraintBottom_toTopOf="@+id/tv_add_additional_message"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_prof" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_additional_message_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_add_message"
        android:textColor="@color/grey_3"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_response"
        app:layout_constraintTop_toBottomOf="@+id/tv_separate_line" />

    <TextView
        android:id="@+id/tv_add_additional_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add_text_with_cv"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/button_response"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_separate_line" />

    <Button
        android:id="@+id/button_response"
        style="@style/style_sf_pro_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/button_text_applied"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_additional_message"
        app:layout_goneMarginTop="11dp" />


</androidx.constraintlayout.widget.ConstraintLayout>