<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".presentation.FragmentMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@+id/card_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/search_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_dark_background"
                    android:contentDescription="@string/envelope_image"
                    android:padding="7dp"
                    android:src="@drawable/ic_responses" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/key_word"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/tv_edt_key_word"
                    android:textColor="@color/inactive_text_color" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/cardview_dark_background"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_in"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_filter"
                android:src="@drawable/icon_filter" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/horizontal_container"
        android:name="com.example.jobsearchapp.presentation.FragmentPartOfMainHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        tools:layout="@layout/offers_items_list" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vertical_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/vertical_container_for_rv"
            android:name="com.example.jobsearchapp.presentation.FragmentPartOfMainVertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/butt_show_all_vacancies"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout="@layout/vacancies_items_list" />

        <Button
            android:id="@+id/butt_show_all_vacancies"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/blue"
            android:paddingTop="15dp"
            android:text="@string/butt_show_vacancy"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>