<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="15dp"
    tools:context=".FragmentVacancie">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_back"
            android:src="@drawable/icon_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/is_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/butt_favorites_des_on"
            android:src="@drawable/ic_favorites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/share_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/share_useless_des_on"
            android:src="@drawable/share_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/is_favorites"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/share_useless_des_on"
            android:src="@drawable/vector_eye"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/share_butt"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_title"
        style="@style/style_sf_pro_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container"
        tools:text="title_vacancies" />

    <TextView
        android:id="@+id/tv_salary_full"
        style="@style/style_sf_pro_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="title_salary_full" />

    <TextView
        android:id="@+id/experience"
        style="@style/style_sf_pro_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingBottom="5dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/container_green_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_salary_full"
        tools:text="title_exp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_green_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experience">

        <androidx.cardview.widget.CardView
            android:id="@+id/container_responded_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@+id/container_looking_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_responded_count"
                android:layout_width="0dp"
                android:layout_height="50dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_looking_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/container_responded_count"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_looking_number"
                android:layout_width="0dp"
                android:layout_height="50dp" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/image_maps_hardcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hardcode_image"
        android:paddingBottom="20dp"
        android:src="@drawable/image_maps_hardcode_png"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_green_card" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_maps_hardcode">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/style_sf_pro_bold_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/large_text"
                android:paddingBottom="5dp"/>

            <TextView
                style="@style/style_sf_pro_bold_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Ваши задачи"
                android:paddingBottom="5dp"/>

            <TextView
                style="@style/style_sf_pro_bold_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/large_text"
                android:paddingBottom="5dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>